--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: GreatVibes;
+    src: url(fonts/GreatVibes-Regular.ttf);
+}
+
+@font-face {
+    font-family: Comfortaa;
+    src: url(fonts/Comfortaa-VariableFont_wght.ttf);
+}
+
 :root {
     --color-background: #d9d9d9;
     --color-form: #ffffff;
@@ -6,6 +16,11 @@
 
 body {
     background-color: var(--color-background);
+    font-family: Comfortaa, sans-serif;
+}
+
+h1 {
+    font-family: GreatVibes, sans-serif;
 }
 
 form {
