--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@ form {
     border-bottom: 1px solid var(--color-separator);
 }
 
+.form-text {
+    font-size: 0.75rem;
+}
+
 .calendar-wrap {
     position: relative;
     width: 11rem;
