--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@
 }
 
 :root {
-    --color-background: #d9d9d9;
-    --color-form: #ffffff;
-    --color-separator: #e9ecef;
     --color-calendar: #adb5bd;
+    --color-contents: #ffffff;
+    --color-background: #d9d9d9;
+    --color-separator: #e9ecef;
 }
 
 body {
@@ -25,7 +25,7 @@ h1 {
 }
 
 form {
-    background-color: var(--color-form);
+    background-color: var(--color-contents);
     border-radius: 1rem;
 }
 
@@ -53,4 +53,9 @@ form {
     right: 0.75rem;
     pointer-events: none;
     fill: var(--color-calendar);
+}
+
+.result {
+    background-color: var(--color-contents);
+    border-radius: 1rem;
 }
