--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     --color-calendar: #adb5bd;
     --color-contents: #ffffff;
     --color-background: #d9d9d9;
+    --color-grid-border: #ced4da;
     --color-separator: #e9ecef;
 }
 
@@ -55,7 +56,17 @@ form {
     fill: var(--color-calendar);
 }
 
-.result {
+#result {
     background-color: var(--color-contents);
     border-radius: 1rem;
+}
+
+#result table {
+    border: 1px solid var(--color-grid-border);
+}
+
+#result td {
+    width: 10px;
+    height: 10px;
+    background-color: var(--color-contents);
 }
