Removed id from birth date input

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ form {
     width: 11rem;
 }
 
-#birth-date {
+input[name="birth_date"] {
     font-family: 'Courier New', Courier, monospace;
     background-color: initial;
 }
