--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body {
 
 h1 {
     font-family: GreatVibes, sans-serif;
+    background: linear-gradient(100deg, #4f9eec, #92ef4c, #f1e34a, #fa7141);
+    background-clip: text;
+    color: transparent;
 }
 
 form {
